fixed element shifting css error
fixed an error where the big face-recognised-emoji would shift downwards preventing the clicks on the select from being recognised

--- a/investigations/cam_emotion_test/www/css/style.css
+++ b/investigations/cam_emotion_test/www/css/style.css
@@ -5,31 +5,69 @@ ion-slide-box {
 }
 div.box {
   width: 100%;
-  height:100%;
+  height:20px;
   display:block;
   background-color:silver;
 }
 
 .greenBackground{
-  
+ /*  background-color: green; */
 }
 .redBackground{
-  
+  /* background-color: red; */
 }
 .blueBackground{
-  
+  /* background-color: blue; */
 }
 .recognisedEmojiExpression{
-  width: 320px;
-  height: 240px;
-  font-size: 240px;
+ 
+  font-size: 250px;
   text-align: center;
-   position: relative;
-  top: 100%;
-  left: 50%; 
-  transform: translate(-50%, -50%);
+  position: relative;
+  top: 50%;
+  /* position: relative; */
+  /* top: 50%; */
+  /* left: 50%;  */
+  /* transform: translate(-50%, -50%); */
   
 }
 .centreAlign{
   text-align: center;
+}
+.canvasContainer{
+  /* width: 320px; */
+  height: 250px;
+}
+.spacer{
+  /* height: 20px; */
+  height: 15px;
+}
+.moodSelector {
+  width: 320px;
+	font-size: 16px;
+	font-family: sans-serif;
+	font-weight: 700;
+	/* color: #444; */
+	line-height: 1.3;
+	padding: .6em 1.4em .5em .8em;
+	/* width: 100%;
+	max-width: 100%; */ 
+	box-sizing: border-box;
+	margin: 0;
+	border: 1px solid #aaa;
+	box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+	border-radius: .5em;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+  background-color: #fff;
+  background-image: url("arrow-down-b.svg"),
+    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    
+    
+	/* background-image: linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%); */
+	background-repeat: no-repeat, repeat;
+	background-position: right .7em top 50%, 0 0;
+  /* background-size: .65em auto, 100%; */
+  background-size: 10%,100%;
 }
